--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "blockstack": "^18.0.4",
+    "bootstrap": "^4.3.1",
     "lodash": "^4.17.11",
     "react": "^16.8.4",
     "react-app-rewired": "^2.1.1",
-    "react-bulma-components": "^2.3.0",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
